OLCS-15988 fixed radio button alignment
OLCS-15988: small CSS tweaks to improve licence history page

--- a/assets/_styles/components/guidance.scss
+++ b/assets/_styles/components/guidance.scss
@@ -59,6 +59,15 @@
       margin-bottom: $gutter-half;
     }
   }
+
+  &--removePadding{
+    padding-bottom: 0;
+    margin-bottom: 30px;
+
+    > .field{
+      margin-bottom: 0;
+    }
+  }
 }
 
 /**
