--- a/assets/_styles/core/buttons.scss
+++ b/assets/_styles/core/buttons.scss
@@ -5,7 +5,7 @@
 %action--core {
   display: inline-block;
   vertical-align: top;
-  font-size: 1em;
+  font-size: 1rem;
   padding: 0.5em 0.75em;
   margin-right: 0.3em;
   text-decoration: none;
